Fix compilation warnings and update depencies
- Migrate org.lz4 -> at.yawk.lz4 to mitigate a CVE
- Generate `@Deprecated` annotation for RTTI properties to resolve
  compiler warnings
- Replace `${revision}` variable with actual versions to resolve
  module installation issues in IJ