@@ -1,1 +1,2 @@
 --enable-preview
+--enable-native-access=ALL-UNNAMED
